Set up environment for shopping checkout and start rendering views

--- a/challenge_2/client/style.css
+++ b/challenge_2/client/style.css
@@ -9,3 +9,12 @@ textarea {
 form {
   align-content: top;
 }
+
+body {
+  background: lightblue;
+  font-family: arial;
+}
+
+#csv-output {
+  font-family: 'Courier New', Courier, monospace;
+}
